# meteostations-geopy

./: .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  tox.ini
.github/workflows/: dev.yml  release.yml  tests.yml
docs/: api.md  conf.py  environment.yml  index.md  usage.md  user-guide.md
docs/user-guide/: agrometeo.ipynb  meteocat.ipynb  metoffice.ipynb
meteostations/: __init__.py  base.py  settings.py  utils.py
meteostations/clients/: __init__.py  aemet.py  agrometeo.py  base.py  iem.py  meteocat.py  metoffice.py
meteostations/mixins/: __init__.py  auth.py  region.py  stations.py  variables.py
tests/: __init__.py  test_meteostations.py
tests/data/stations/: aemet-interim.json  aemet.json  meteocat.json  metoffice.json
tests/data/variables/: meteocat.json
